feat: land v2 dashboard + memory package + routing subsystem onto the shared branch
Consolidates the working-build state from backup/v2-working-2026-08-03 into
integration/all-features, bringing the real product work while deliberately
leaving scratch/archive out of the shared history.

Landed:
- v2 Command Center dashboard redesign (modern card-grid; verified responsive
  with no horizontal overflow at 1600 / 1366 / 1024, zero page errors — the new
  layout reflows where the old 3-column one clipped).
- Vision event broadcaster (VisionEventBroadcaster) + WebServer/AppWiring wiring.
- Memory package (src/openjarvis/memory/: session + episodic) and the
  retriever/config/sdk/context/api_routes changes behind it.
- Learning routing subsystem (src/openjarvis/learning/routing/: classifier,
  feature_extraction, model_tiers, similarity_router, training) + tests + docs.
- Docs/config: JARVIS_DESIGN_SYSTEM.md, java/REVIEW_REPORT.md, config.toml,
  pyproject (memory-reranker optional dep), motion_watcher example.
- New Java CI workflow (.github/workflows/java.yml: JDK 21, mvnw clean test).
- .gitignore: ignore *.log.

Deliberately NOT landed (kept only on the backup branch): the _salvage/ archive
(93 scratch files) and jarvis_persona/ working-state notes — preserved on
backup/v2-working-2026-08-03, out of the shared branch by design.

Full Java reactor suite: 725 tests, 0 failures.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HJ11XU8xijHPe8uvHPzY7J